<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">mahjong</string>
    <string-array name="yaku_array">
        <item>1役</item>
        <item>2役</item>
        <item>3役</item>
        <item>4役</item>
        <item>5役</item>
        <item>6役</item>
        <item>7役</item>
        <item>8役</item>
        <item>9役</item>
        <item>10役</item>
        <item>11役</item>
        <item>12役</item>
        <item>13役</item>
    </string-array>
    <string-array name="Menzen">
        <item>メンゼンの役</item>
        <item>メンゼンツモ 1役</item>
        <item>リーチ 1役</item>
        <item>一発 1役</item>
        <item>タンヤオ 1役</item>
        <item>平和 1役</item>
        <item>一盃口 1役</item>
        <item>役牌(三元牌) 1役</item>
        <item>役牌(風牌) 1役</item>
        <item>槍槓 1役</item>
        <item>嶺上開花 1役</item>
        <item>海底 1役</item>
        <item>河底 1役</item>
        <item>ダブリー 2役</item>
        <item>七対子 2役</item>
        <item>三色同順 2役</item>
        <item>三色同刻 2役</item>
        <item>三暗刻 2役</item>
        <item>一気通貫 2役</item>
        <item>対々和 2役</item>
        <item>チャンタ 2役</item>
        <item>三槓子 2役</item>
        <item>小三元 2役</item>
        <item>混老頭 2役</item>
        <item>二盃口 3役</item>
        <item>ジュンチャン 3役</item>
        <item>混一色 3役</item>
        <item>清一色 6役</item>
    </string-array>
    <string-array name="Naki">
        <item>鳴きの役</item>
        <item>タンヤオ 1役</item>
        <item>役牌(三元牌) 1役</item>
        <item>役牌(風牌) 1役</item>
        <item>槍槓 1役</item>
        <item>嶺上開花 1役</item>
        <item>海底 1役</item>
        <item>河底 1役</item>
        <item>三色同順 1役</item>
        <item>一気通貫 1役</item>
        <item>チャンタ 1役</item>
        <item>三色同刻 2役</item>
        <item>三暗刻 2役</item>
        <item>対々和 2役</item>
        <item>三槓子 2役</item>
        <item>小三元 2役</item>
        <item>混老頭 2役</item>
        <item>ジュンチャン 2役</item>
        <item>混一色 2役</item>
        <item>清一色 5役</item>
    </string-array>
    <string name="privacy_policy">
        【麻雀点数計算アプリ プライバシーポリシー】\n\n
        本サービスの運営者である Junichi は、「麻雀点数計算アプリ」（以下、「本サービス」といいます）による、ユーザーの個人情報の取り扱いについて、以下の通りプライバシーポリシー（以下、本ポリシー）を定めます。\n\n
        1.情報を取得するアプリ提供者\n\n
        Junichi\n\n
        2.取得するユーザー情報と目的\n\n
        アクセス解析サービスについて\n\n
        本サービスでは、ユーザーの使用状況を把握するためにGoogle社のサービスであるGoogle Analyticsを利用しています。ここで収集した情報には個人を識別する情報は含まれておりません。また、それらの情報は、Google社のプライバシーポリシーに基づき管理されます。\n\n
        本ポリシーのリンクについて\n\n
        本サービスでは、プライバシーポリシーのリンク先としてGitHub社のサービスであるGitHubを利用しています。ここで収集した情報は、GitHub社のプライバシーポリシーに基づき管理されます。\n\n
        3.取得方法\n\n
        本アプリケーションをダウンロードするためにアクセスしたGoogle社サービス及び、本ポリシーのリンク先であるGitHub社サービスにより、ユーザー情報を自動取得します。\n\n
        4.通知・公表または同意取得の方法\n\n
        (1) 本ポリシーに関する通知・公表は、リンク先であるGitHu社のサービスに掲載する方法で行います。\n
        (2) 同意の取得は、本アプリケーションのダウンロード時に取得する方法で行います。\n\n
        5.第三者提供\n\n
        本サービスは、個人を識別する情報の取得は行っていませんが、以下の場合第三者に提供することがあります。\n\n
        (1) 統計的なデータなどユーザーを識別することができない状態で提供する場合\n
        (2) 法令に基づき開示・提供を求められた場合\n\n
        6.お問い合わせ\n\n
        本サービスのプライベートポリシーに関する、ご意見、ご質問、苦情の申出、その他ユーザー情報の取扱いに関するお問い合わせは、Junichi までご連絡ください。\n
        尚、ユーザー様からご提供いただいた個人情報は、本サービスのプライベートポリシーに基づき、お客様のご意見、ご質問、苦情の申出、その他ユーザー情報の取扱いに関するお問い合わせに対する適切な回答を提供するためにのみ利用いたします。ユーザー様の個人情報は、厳重に保管し、本内容以外の目的で使用することはありません。\n\n
        7.改定\n\n
        運営者は、運営者の裁量に基づいて、本ポリシーを変更します。\n\n
        8.制定日・改定日\n\n
        制定：2023年8月8日
    </string>

    <string name="radioButtonPon1_contentDescription">チュンチャンパイのポンが1個</string>
    <string name="radioButtonPon2_contentDescription">チュンチャンパイのポンが2個</string>
    <string name="radioButtonPon3_contentDescription">チュンチャンパイのポンが3個</string>
    <string name="radioButtonPon4_contentDescription">チュンチャンパイのポンが4個</string>

    <string name="radioButtonAnkoPon1_contentDescription">チュンチャンパイのアンコまたは、１、９、字牌のポンが1個</string>
    <string name="radioButtonAnkoPon2_contentDescription">チュンチャンパイのアンコまたは、１、９、字牌のポンが2個</string>
    <string name="radioButtonAnkoPon3_contentDescription">チュンチャンパイのアンコまたは、１、９、字牌のポンが3個</string>
    <string name="radioButtonAnkoPon4_contentDescription">チュンチャンパイのアンコまたは、１、９、字牌のポンが4個</string>

    <string name="radioButtonAnkoB1_contentDescription">１、９、字牌のアンコまたは、チュンチャンパイのミンカンが1個</string>
    <string name="radioButtonAnkoB2_contentDescription">１、９、字牌のアンコまたは、チュンチャンパイのミンカンが2個</string>
    <string name="radioButtonAnkoB3_contentDescription">１、９、字牌のアンコまたは、チュンチャンパイのミンカンが3個</string>
    <string name="radioButtonAnkoB4_contentDescription">１、９、字牌のアンコまたは、チュンチャンパイのミンカンが4個</string>

    <string name="radioButtonAnkanA1_contentDescription">チュンチャンパイのアンカンまたは、１、９、字牌のミンカンが1個</string>
    <string name="radioButtonAnkanA2_contentDescription">チュンチャンパイのアンカンまたは、１、９、字牌のミンカンが2個</string>
    <string name="radioButtonAnkanA3_contentDescription">チュンチャンパイのアンカンまたは、１、９、字牌のミンカンが3個</string>

    <string name="radioButtonAnkanB1_contentDescription">１、９、字牌のアンカンが1個</string>
    <string name="radioButtonAnkanB2_contentDescription">１、９、字牌のアンカンが2個</string>
    <string name="radioButtonAnkanB3_contentDescription">１、９、字牌のアンカンが3個</string>

</resources>