<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".FuCalc4Activity">

    <TextView
        android:id="@+id/Pinfu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="※平和・ツモは基本符20符、七対子は25符で計算"
        android:textStyle="bold"
        android:textColor="#FF0000" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonMenRon"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="門前ロン 30符" />

        <RadioButton
            android:id="@+id/radioButtonBasic"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="基本符 20符" />

        <RadioButton
            android:id="@+id/radioButtonSeven"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="七対子" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonTanki"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="タンキ" />

        <RadioButton
            android:id="@+id/radioButtonKanchan"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="カンチャン" />

        <RadioButton
            android:id="@+id/radioButtonPenchan"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="ペンチャン" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:text="役牌がアタマ 2符" />

        <CheckBox
            android:id="@+id/anotherCheckBox"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="ツモアガリ 2符" />

    </LinearLayout>


    <TextView
        android:id="@+id/Pon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="中張牌のポン 2符"
        android:textStyle="bold"
        android:textColor="#008000"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonPon1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="１個"
            android:contentDescription="@string/radioButtonPon1_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonPon2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="２個"
            android:contentDescription="@string/radioButtonPon2_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonPon3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="３個"
            android:contentDescription="@string/radioButtonPon3_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonPon4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="４個"
            android:contentDescription="@string/radioButtonPon4_contentDescription"/>

    </RadioGroup>

    <TextView
        android:id="@+id/AnkoPon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="中張牌の暗刻　/　１・９、字牌のポン 4符"
        android:textStyle="bold"
        android:textColor="#008000"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonAnkoPon1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="１個"
            android:contentDescription="@string/radioButtonAnkoPon1_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkoPon2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="２個"
            android:contentDescription="@string/radioButtonAnkoPon2_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkoPon3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="３個"
            android:contentDescription="@string/radioButtonAnkoPon3_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkoPon4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="４個"
            android:contentDescription="@string/radioButtonAnkoPon4_contentDescription"/>

    </RadioGroup>


    <TextView
        android:id="@+id/AnkoB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="１・９、字牌の暗刻　/　中張牌の明槓 8符"
        android:textColor="#008000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonAnkoB1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="１個"
            android:contentDescription="@string/radioButtonAnkoB1_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkoB2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="２個"
            android:contentDescription="@string/radioButtonAnkoB2_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkoB3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="３個"
            android:contentDescription="@string/radioButtonAnkoB3_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkoB4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="４個"
            android:contentDescription="@string/radioButtonAnkoB4_contentDescription"/>

    </RadioGroup>

    <TextView
        android:id="@+id/AnkanA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="中張牌の暗槓　/　１・９、字牌の明槓 16符"
        android:textStyle="bold"
        android:textColor="#008000"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonAnkanA1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="１個"
            android:contentDescription="@string/radioButtonAnkanA1_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkanA2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="２個"
            android:contentDescription="@string/radioButtonAnkanA2_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkanA3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="３個"
            android:contentDescription="@string/radioButtonAnkanA3_contentDescription"/>

    </RadioGroup>

    <TextView
        android:id="@+id/AnkanB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="１・９、字牌の暗槓 32符"
        android:textColor="#008000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonAnkanB1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="１個"
            android:contentDescription="@string/radioButtonAnkanB1_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkanB2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="２個"
            android:contentDescription="@string/radioButtonAnkanB2_contentDescription"/>

        <RadioButton
            android:id="@+id/radioButtonAnkanB3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="３個"
            android:contentDescription="@string/radioButtonAnkanB3_contentDescription"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="start"> <!-- 左端揃えのために gravity を追加 -->

        <Button
            android:layout_width="177dp"
            android:layout_height="50dp"
            android:onClick="calculateTotalFu"
            android:text="計算" />

        <Space
            android:layout_width="40dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textViewTotalFu"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="符"
            android:textSize="26sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"> <!-- 左端揃えのために gravity を追加 -->

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="goToYakuActivity"
            android:text="戻る" />

        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <Button
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="goToScore4Activity"
            android:text="点数へ" />

    </LinearLayout>

</LinearLayout>